<resources>
    <string name="app_name">Prolendar</string>
    <string name="welcome">Welcome back</string>
    <string name="next_page">Click here to access next page</string>
    <string name="id_client">307043464216-gmflaeo1e2abjvg9t08p1a8k5piu40g0.apps.googleusercontent.com</string>
    <!-- SignInActivity -->
    <string name="password">Password</string>
    <string name="account">Create account</string>
    <string name="email">E-mail</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="signin">Sign in</string>
    <string name="done">Done</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="signin_activity">SignInActivity</string>

    <!-- CalendarActivity -->
    <string name="calendar_activity">CalendarActivity</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>
    <string name="create">Create and check event</string>
    <string name="no_network">No network connection available.</string>
    <string name="need_google_service">This app requires Google Play Services. Please install " +
                                    "Google Play Services on your device and relaunch this app.
    </string>
    <string name="no_result">No results returned.</string>
    <string name="request_cancel">Request cancelled.</string>
    <string name="error_occur">The following error occurred:</string>
    <string name="need_contact">Prolendar need that you allow the contact section</string>
    <string name="resum_event">%s on %s at %s</string>
    <string name="get_location">Get current location</string>
    <!-- FormActivity -->
    <string name="form_activity">FormActivity</string>
    <string name="job">Select a job</string>
    <string name="formule">Select a formule</string>
    <string name="artisan">Select an artisan</string>
    <string name="finish">finish</string>

    <!-- AppointmentActivity -->
    <string name="appointment_activity">AppointmentActivity</string>
    <string name="resum_selection">You have selected : %s for %s with %s</string>

</resources>
