<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/olegbgimage" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/t" />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


        <ImageView
            android:layout_width="77dp"
            android:layout_height="73dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/ic_launcher" />

   <com.prolendar.thauvi_a.prolendar.MyEditText
       android:id="@+id/email"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:hint="@string/email"
       android:textSize="14sp"
       android:letterSpacing="0.1"
       android:layout_marginStart="40dp"
       android:layout_marginTop="100dp"
       android:textColorHint="#9E9EAA"
       android:background="#00000000"
       android:textColor="#9E9EAA"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.001dp"
        android:background="#5B5B65"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <com.prolendar.thauvi_a.prolendar.MyEditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textSize="14sp"
        android:letterSpacing="0.1"
        android:inputType="textPassword"
        android:textColor="#9E9EAA"
        android:textColorHint="#9E9EAA"
        android:background="#00000000"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.001dp"
        android:background="#5B5B65"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>

        <com.prolendar.thauvi_a.prolendar.MyTextView
            android:id="@+id/signin"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/rounded"
            android:focusable="true"
            android:clickable="true"
            android:onClick="toCalendar"
            android:gravity="center"
            android:letterSpacing="0.1"
            android:padding="17dp"
            android:text="Calendar"
            android:textColor="#ececf1"
            android:textSize="14sp" />

        <com.prolendar.thauvi_a.prolendar.MyTextView
            android:id="@+id/done"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:clickable="true"
            android:onClick="toForm"
            android:text="@string/done"
            android:textSize="14sp"
            android:letterSpacing="0.1"
            android:textColor="#ececf1"
            android:background="@drawable/rounded"
            android:gravity="center"
            android:padding="17dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="80dp"/>


    <ImageView
        android:id="@+id/sign_in_button"
        android:layout_width="275dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClick"
        android:layout_height="100dp"
        android:src="@drawable/signin_button"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_gravity="center"/>

        <com.prolendar.thauvi_a.prolendar.MyTextView
            android:id="@+id/sign_out_button"
            android:layout_height="wrap_content"
            android:layout_width="275dp"
            android:focusable="true"
            android:clickable="true"
            android:onClick="onClick"
            android:text="@string/sign_out"
            android:textSize="14sp"
            android:letterSpacing="0.1"
            android:textColor="#ececf1"
            android:background="@drawable/rounded"
            android:gravity="center"
            android:padding="17dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="30dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">


        <com.prolendar.thauvi_a.prolendar.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textColor="#8E8E9A"
            android:textSize="14sp"
            android:letterSpacing="0.1"
            android:layout_marginTop="12dp"/>



    </LinearLayout>
    </LinearLayout>

</FrameLayout>

</LinearLayout>





